@@ -90,6 +90,8 @@ sub handle_request {
         $self->images_logo_page();
     } elsif ( $path eq '/static/images/favicon.png' ) {
         $self->images_favicon_page();
+    } elsif ( $path eq '/static/xml/opensearch.xml' ) {
+        $self->opensearch_page();
     } else {
         print "HTTP/1.0 404 Not found\r\n";
         print $cgi->header,
@@ -375,6 +377,18 @@ sub images_favicon_page {
     print "HTTP/1.0 200 OK\r\n";
     print $cgi->header( -type => 'image/png', -expires => '+1d' );
     print Template::Declare->show('images_favicon');
+}
+
+sub opensearch_page {
+    my $self = shift;
+    my $cgi  = $self->cgi;
+
+    print "HTTP/1.0 200 OK\r\n";
+    print $cgi->header(
+        -type    => 'application/opensearchdescription+xml',
+        -expires => '+1d'
+    );
+    print Template::Declare->show('opensearch');
 }
 
 1;
